--- a/.github/workflows/build-and-test-template.yml
+++ b/.github/workflows/build-and-test-template.yml
@@ -186,7 +186,7 @@ jobs:
           cd julia
           echo $(git rev-parse HEAD)
           git remote add fork https://github.com/Zentrik/julia
-          git fetch fork # https://jvns.ca/blog/2023/11/10/how-cherry-pick-and-revert-work/
+          git fetch --all # https://jvns.ca/blog/2023/11/10/how-cherry-pick-and-revert-work/
 
           for patch in ${{ needs.build_llvm_assert.outputs.JULIA_PATCHES_TO_APPLY }}; do
             git apply $GITHUB_WORKSPACE/julia-patches/$patch -v --3way
@@ -233,7 +233,7 @@ jobs:
           cd julia
           echo $(git rev-parse HEAD)
           git remote add fork https://github.com/Zentrik/julia
-          git fetch fork # https://jvns.ca/blog/2023/11/10/how-cherry-pick-and-revert-work/
+          git fetch --all # https://jvns.ca/blog/2023/11/10/how-cherry-pick-and-revert-work/
 
           for patch in ${{ needs.build_llvm_assert.outputs.JULIA_PATCHES_TO_APPLY }}; do
             git apply $GITHUB_WORKSPACE/julia-patches/$patch -v --3way
