--- a/.github/workflows/build-and-test-template.yml
+++ b/.github/workflows/build-and-test-template.yml
@@ -271,8 +271,8 @@ jobs:
           tar xzf *.tar.gz
           cd julia-*/
 
-          bin/julia.exe -e 'using InteractiveUtils; InteractiveUtils.versioninfo()'
-          bin/julia.exe -e "Base.runtests(\"all --ci --skip Pkg Sockets cmdlineargs compiler\"; ncores=4)"
+          JULIA_LLVM_ARGS="-verify-each" bin/julia.exe -e 'using InteractiveUtils; InteractiveUtils.versioninfo()'
+          JULIA_LLVM_ARGS="-verify-each" bin/julia.exe -e "Base.runtests(\"all --ci --skip Pkg Sockets cmdlineargs compiler\"; ncores=4)"
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
         if: always()
@@ -298,8 +298,8 @@ jobs:
           tar xzf *.tar.gz
           cd julia-*/
 
-          bin/julia -e 'using InteractiveUtils; InteractiveUtils.versioninfo()'
-          bin/julia -e "Base.runtests(\"all --ci --skip Pkg Sockets cmdlineargs\"; ncores=4)"
+          JULIA_LLVM_ARGS="-verify-each" bin/julia -e 'using InteractiveUtils; InteractiveUtils.versioninfo()'
+          JULIA_LLVM_ARGS="-verify-each" bin/julia -e "Base.runtests(\"all --ci --skip Pkg Sockets cmdlineargs\"; ncores=4)"
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
         if: always()
