--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -45,12 +45,12 @@ jobs:
       fail-fast: false
       matrix:
         target:
-          - x86_64-linux-gnu-cxx11
-          - x86_64-linux-musl-cxx11
-          - x86_64-w64-mingw32-cxx11
-          - aarch64-apple-darwin
+          # - x86_64-linux-gnu-cxx11
+          # - x86_64-linux-musl-cxx11
+          # - x86_64-w64-mingw32-cxx11
+          # - aarch64-apple-darwin
           - x86_64-apple-darwin
-          - i686-w64-mingw32-cxx11
+          # - i686-w64-mingw32-cxx11
     uses: ./.github/workflows/build-and-test-template.yml
     with:
       target: ${{ matrix.target }}
